--- a/media/less/style/chat/rooms.less
+++ b/media/less/style/chat/rooms.less
@@ -131,7 +131,7 @@
     @media (min-width: @screen-sm-max) {
         display: none;
         .lcb-room-sidebar-opened & {
-            display: block;
+            .flex-display;
         }
     }
 }
